--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@storybook/addon-links": "^7.6.10",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.10",
+    "@storybook/jest": "^0.2.3",
     "@storybook/preset-create-react-app": "^7.6.10",
     "@storybook/react": "^7.6.10",
     "@storybook/react-webpack5": "^7.6.10",
     "@storybook/test": "^7.6.10",
+    "@storybook/testing-library": "^0.2.2",
     "eslint-plugin-storybook": "^0.6.15",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.10",
